// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builds index.css 1`] = `
"
"
`;

exports[`builds index.css 2`] = `
".foo{content:"bar"}
"
`;

exports[`builds index.js 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`builds panel plugins 1`] = `
"const e = { extends: "k-info-field" };
window.panel.plugin("kirbyup/test", {
  fields: {
    demo: e
  }
});
"
`;

exports[`compiles vue templates 1`] = `
"import { openBlock as r, createElementBlock as a, createElementVNode as c } from "vue";
const i = (o, e) => {
  const t = o.__vccOpts || o;
  for (const [n, s] of e)
    t[n] = s;
  return t;
}, d = {
  created() {
    console.log("created");
  }
}, l = { class: "k-demo-section" };
function p(o, e, t, n, s, m) {
  return r(), a("section", l, e[0] || (e[0] = [
    c(
      "header",
      { class: "k-section-header" },
      [
        c("h2", { class: "k-headline" }, "Custom section")
      ],
      -1
      /* HOISTED */
    )
  ]));
}
const _ = /* @__PURE__ */ i(d, [["render", p]]);
window.panel.plugin("kirbyup/test", {
  sections: {
    demo: _
  }
});
"
`;

exports[`supports built-in env variables 1`] = `
"const o = "production";
export {
  o as mode
};
"
`;

exports[`supports custom env variables 1`] = `
<<<<<<< HEAD
<<<<<<< HEAD
"var kirbyupExport=function(o){"use strict";const r="bar";return o.foo=r,Object.defineProperty(o,Symbol.toStringTag,{value:"Module"}),o}({});
=======
<<<<<<< HEAD
"var kirbyupExport=function(e){"use strict";var t={BASE_URL:"/",DEV:!1,MODE:"production",PROD:!0,SSR:!1};const o=t.KIRBYUP_FOO;return e.foo=o,Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),e}({});
=======
"var e = { BASE_URL: "/", MODE: "production", DEV: !1, PROD: !0, SSR: !1 };
=======
"var e = { BASE_URL: "/", DEV: !1, MODE: "production", PROD: !0, SSR: !1 };
>>>>>>> 8c8a728 (chore: upgrade dependencies)
const o = e.KIRBYUP_FOO;
export {
  o as foo
};
<<<<<<< HEAD
>>>>>>> 682d144 (feat!: migrate to Vue 3 & remove deprecated options)
>>>>>>> 4af590d (feat!: migrate to Vue 3 & remove deprecated options)
=======
>>>>>>> 8c8a728 (chore: upgrade dependencies)
"
`;

exports[`supports kirbyup.config.js with function 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

exports[`supports kirbyup.config.js with object 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;

<<<<<<< HEAD
=======
exports[`supports postcss plugins 1`] = `
"
"
`;

exports[`supports postcss plugins 2`] = `
".foo{top:logical;right:0;bottom:5px;left:10px}[dir=rtl] .bar{margin-right:10px}
"
`;

>>>>>>> 4af590d (feat!: migrate to Vue 3 & remove deprecated options)
exports[`supports resolve aliases 1`] = `
"const o = "bar";
export {
  o as default
};
"
`;
